# template-CPP

./: .gitignore  CMakeLists.txt  README.md  cmd_line  index-sort-f.html  index-sort-l.html  index.html  main.cpp
.github/workflows/: c-cpp.yml
include/: usage.hpp
src/: index-sort-f.html  index-sort-l.html  index.html  usage.cpp  usage.cpp.func-c.html  usage.cpp.func.html  usage.cpp.gcov.html
test/: test_usage.cpp
